Fixed out of bounds links and added media queries to all components

--- a/src/app/algorithmspage/algorithmspage.component.css
+++ b/src/app/algorithmspage/algorithmspage.component.css
@@ -1,12 +1,3 @@
-.parent {
-    position: relative;
-    width: 100vw;
-    height: 70px;
-    max-width: 100%;
-    max-height: 100%;
-    min-height: 70px;
-    background-color: black;
-}
 a {
     position: relative;
     text-decoration: none;
@@ -20,210 +11,35 @@ a:after {
     left: 0;
     transition: 0.4s;
 }
-.showBar:after {
-    width: 100%;
-}
-.showBar2:hover:after {
-    width: 100%;
-}
-
-.child1 {
-    user-select: none;
-    overflow: hidden;
-    background-color: black;
-    position: absolute;
-    width: 100vw;
-    max-width: 100%;
-    height: 70px;
-    min-height: 70px;
-    top: auto;
-    left: 0;
-    opacity: 0.5;
-    max-height: 70px;
-    border-bottom: solid lightgrey 0.5px;
-}
-.child2 {
-    user-select: none;
-    overflow: hidden;
-    color: rgb(250, 248, 248);
-    width: 100vw;
-    max-width: 100%;
-    height: 70px;
-    min-height: 70px;
-    opacity: 1;
-    z-index: 1;
-    background: none;
-}
-.headerText {
-    color: rgb(216, 214, 214);
-    height: 70px;
-    min-height: 70px;
-    font-size: 25px;
-    margin-top: 22px;
-    position: relative;
-    float: right;
-    margin-right: 100px;
-    overflow: hidden;
-}
-.child3 {
-    position: absolute;
-    width: 100vw;
-    max-width: 100%;
-    height: 380px;
-    min-height: 380px;
-    margin-top: 90px;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    background-color: black;
-    overflow: hidden;
-}
-
-.parent2 {
-    position: relative;
-    width: 100;
-    max-width: 100%;
-    height: 3100px;
-    min-height: 3100px;
-    overflow: hidden;
-    background-color: rgb(8, 8, 8);
-}
-video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 25px;
-    filter: blur(1.2px);
-}
-
-.profile {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    border: solid grey 1.5px;
-    user-select: none;
-}
-.header1 {
-    width: 0%;
-    float: right; 
-    margin-right: 65px; 
-    margin-top: 13px;
-}
-.header2 {
-    float: right; 
-    margin-right: 40px; 
-    margin-top: 21px;
-    color: rgb(250, 248, 248);
-    font-size: 25px;
-}
-.header2:after {
-    content: "";
-    display: block;
-    background-color: rgb(50, 184, 184);
-    height: 3px;
-    width: 0;
-    left: 0;
-    bottom: -10px;
-    transition: 0.4s;
-}
-.header2:hover {
-    color: rgb(250, 248, 248);
-}
-.header2:hover:after {
-    width: 100%;
-}
-.header1:hover {
-    cursor: pointer;
-    cursor: hand;
-}
-.profile:hover {
-    cursor: pointer;
-    cursor: hand;
-}
-@media screen and (max-width: 659px) {
-    .child2 {
-        display: none;
+@media screen and (max-width: 1155px) {
+    .textMainA {
+        font-size: 19px;
+        width: 940px;
     }
 }
-.textMain {
-    position: absolute;
-    left: 50%;
-    margin-top: 10px;
-    transform: translate(-50%, -50%);
-    color: rgb(219, 217, 217); 
-    font-size: 22px;
-    width: 1100px;
-    line-height: 30px;
+@media screen and (max-width: 970px) {
+    .textMainA {
+        font-size: 17px;
+        width: 740px;
+    }
 }
-.topicCard {
-    color: rgb(237, 237, 237);
-    position: relative;
-    margin-top: 30px;
-    width: 650px;
-    height: 175px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(0, 0, 0);
-    border: 1.5px solid rgb(250, 248, 248);
-    transition: transform .5s ease;
-    transform: translateY(-1%);
+@media screen and (max-width: 769px) {
+    .textMainA {
+        font-size: 15px;
+        width: 630px;
+    }
 }
-.topicCard:hover {
-    transform: scale(1.025);
-    transition: transform .5s ease;
-}
-
-svg {
-    position: absolute;
-    transform:rotate(-90deg);
-    right: -120px;
-    top: -50px;
-}
-
-.cardText {
-    color: rgb(237, 237, 237);
-    font-size: 36px;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    text-align: center;
-    align-items: center;
-    text-shadow: 1px 1px 2px black, 0 0 25px black;
-    backdrop-filter: blur(0.5px);
-}
-
-.topics {
-    position: relative;
-}
-
-.header2:after {
-    content: "";
-    display: block;
-    background-color: rgb(50, 184, 184);
-    height: 3px;
-    width: 0;
-    left: 0;
-    bottom: -10px;
-    transition: 0.4s;
-}
-.header2:hover {
-    color: rgb(250, 248, 248);
-}
-.header2:hover:after {
-    width: 100%;
-}
-.header1:hover {
-    cursor: pointer;
-    cursor: hand;
-}
-.profile:hover {
-    cursor: pointer;
-    cursor: hand;
-}
-@media screen and (max-width: 1310px) {
-    
-}
-@media screen and (max-width: 1130px) {
-
+@media screen and (max-width: 659px) {
+    .parent2A {
+        display: none;
+    }
+    .containerInfoBar {
+        display: None;
+    }
+    .header2A {
+        display: None;
+    }
+    .header1A {
+        display: None;
+    }
 }
