--- a/src/app/landingpage/landingpage.component.css
+++ b/src/app/landingpage/landingpage.component.css
@@ -14,7 +14,7 @@ a:after {
         height: 260px;
         right: 100px;
     }
-    .welcomeLAnding {
+    .welcomeLanding {
         left: -100px;
     }
     .welcomeSubtextLanding {
@@ -25,8 +25,17 @@ a:after {
         height: 260px;
         right: 100px;
     }
-    svg {
-        top: 28px;
+    .linkLanding {
+        height: 256px;
+    }
+    .homeImage {
+        height: 256px;
+    }
+    .svgLanding {
+        height: 95px;
+        width: 95px;
+        top: 161px;
+        right: 5px;
     }
 }
 @media screen and (max-width: 1130px) {
@@ -46,8 +55,56 @@ a:after {
     .welcomeSubtextLanding {
         left: -200px;
     }
-    svg {
-        top: 28px;
+}
+@media screen and (max-width: 800px) {
+    .cardDS {
+        width: 580px;
+        height: 180px;
+        right: 350px;
+    }
+    .cardA {
+        width: 580px;
+        height: 180px;
+        right: 350px;
+    }
+    .welcomeLanding {
+        left: -200px;
+    }
+    .welcomeSubtextLanding {
+        left: -200px;
+    }
+    .linkLanding {
+        height: 176px;
+    }
+    .homeImage {
+        height: 176px;
+        filter: blur(1.5px);
+    }
+    .svgLanding {
+        height: 95px;
+        width: 95px;
+        top: 80px;
+        right: 5px;
+    }
+    .cardTextALanding {
+        font-size: 50px;
+    }
+    .cardTextDSLanding {
+        font-size: 50px;
+    }
+}
+@media screen and (max-width: 659px) {
+    .parent2Landing {
+        display: none;
+    }
+    .containerInfoBar {
+        display: None;
+    }
+    .header2Landing {
+        display: None;
+    }
+    .header1Landing {
+        display: None;
     }
 }
 .hide {
